--- a/_posts/2018-06-18-iterator.md
+++ b/_posts/2018-06-18-iterator.md
@@ -450,7 +450,8 @@ static final <K,V> HashEntry<K,V> entryAt(HashEntry<K,V>[] tab, int i) {
 ```
 它们都是调用了`UNSAFE.getObjectVolatile`方法，利用了volatile access的方式，相较于上锁的方式性能更好。
 
-## JavaScript实现的Iterator的例子
+## 番外篇
+### JavaScript实现的Iterator的例子
 这个例子来自MDN的文档，做法比较简洁,[迭代器](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Guide/Iterators_and_Generators)
 ```javascript
 function makeIterator(array){
@@ -478,6 +479,7 @@ return {
     }
 }
 ```
+JavaScript利用了闭包实现了Iterator和Java利用内部类实现有相似的地方。
 
 ## 总结
 Iterator的主要目的还是为了表现底层数据结构的所有元素，提供一种统一的遍历方式。在不同的数据结构需要针对不同语义做出改动，像`LinkedList`的支持add方法，像`ConcurrentHashMap`和`HashMap`的`advance`处理，像`ConcurrentHashMap`那样不判断`modeCount`而使用`volatile access`等。
